/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    mavenCentral()
}

group = 'groupId'
version = '1.0-SNAPSHOT'
description = 'jungol'
java.sourceCompatibility = JavaVersion.VERSION_21

// https://mvnrepository.com/artifact/org.assertj/assertj-core
dependencies {
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.22.0'
}
